<resources>
    <string name="app_name">LED Strip Controller</string>
    <string name="item_bluetooth">Bluetooth</string>
    <string name="item_strip_size">Strip Size</string>
    <string name="btlistener_connected_to">Connected to</string>
    <string name="btlistener_connection_failed">Connection Failed</string>
    <string name="btlistener_connection_lost">Connection Lost</string>
    <string name="dialog_select_one">Select One</string>
    <string name="dialog_uuid_not_available">UUIDs not available</string>
    <string name="dialog_strip_size_title">Select the size of the Strip</string>
    <string name="dialog_strip_size_ok">OK</string>
    <string name="dialog_strip_size_cancel">Cancel</string>
    <string name="strip_size_updated">Strip size updated</string>
    <string name="navigation_drawer_open">Open the navigation Drawer</string>
    <string name="navigation_drawer_close">Close the navigation Drawer</string>
    <string name="nav_manual">Manual</string>
    <string name="nav_alarm">Alarm</string>
    <string name="nav_timer">Timer</string>
    <string name="nav_climate">Climate</string>
    <string name="tab_title_static">Static</string>
    <string name="tab_title_dynamic">Dynamic</string>
    <string name="color_dialog_title">Select a color</string>
    <string name="bar_red">red</string>
    <string name="bar_green">green</string>
    <string name="bar_blue">blue</string>
    <string name="bar_brightness">brightness</string>
    <string name="color_preset">Color Preset</string>
    <string name="button_clear">Clear</string>
    <string name="switch_invert">Invert</string>
    <string name="bar_speed">speed</string>
    <string name="bar_size">size</string>
</resources>
